# kws-eval

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindGMock.cmake  FindGlog.cmake
cmd/: Argument.h  ArgumentTest.cc  CMakeLists.txt  Option.h  OptionTest.cc  Parser.h  ParserTest.cc
core/: Assessment.h  AssessmentTest.cc  Bootstrapping.h  BoundingBox.h  BoundingBoxTest.cc  CMakeLists.txt  DocumentBoundingBox.h  DocumentBoundingBoxEventSet.h  DocumentBoundingBoxEventSetTest.cc  DocumentBoundingBoxTest.cc  DummyLocation.h  Event.h  EventSet.h  EventSetTest.cc  EventTest.cc  Match.h  MatchError.h  MatchErrorCounts.h  MockEvent.h  MockLocation.h  ScoredEvent.h  ShapedEvent.h  ShapedEventTest.cc  Statistic.h  TypeInfo.h
evaluator/: CMakeLists.txt  Evaluator.h  PairedEvent.h  SimpleEvaluator.h  SimpleEvaluatorTest.cc
examples/Icdar17KwsEval/: Valid_KWS_GT.ALL.2x.txt  examQueryResults.txt  hyp.txt  ref.txt
examples/KwsEvalIcdar17/: hyp.txt
examples/SimpleKwsEval/: query_groups_cv1.txt  query_groups_cv2.txt  query_groups_cv3.txt  query_groups_cv4.txt  ref_cv1.txt  ref_cv2.txt  ref_cv3.txt  ref_cv4.txt
mapper/: CMakeLists.txt  IdentityMapper.h  Mapper.h  ScoredEventMapper.h  ScoredEventMapperTest.cc  StringEventToIntMapper.h  StringEventToIntMapperTest.cc  StringToIntMapper.h  StringToIntMapperTest.cc
matcher/: CMakeLists.txt  Matcher.h  SimpleMatcher.h  SimpleMatcherTest.cc
reader/: CMakeLists.txt  PlainTextMapEventReader.h  PlainTextReader.h  PlainTextReaderTest.cc  Reader.h
scorer/: CMakeLists.txt  FloatScore.h  IntersectionOverHypothesisAreaScorer.h  IntersectionOverHypothesisAreaScorerTest.cc  IntersectionOverUnionAreaScorer.h  IntersectionOverUnionAreaScorerTest.cc  MockScorer.h  Scorer.h  SoftBoundingBoxScorer.h  SoftBoundingBoxScorerTest.cc  SoftIntersectionOverHypothesisAreaScorerTest.cc  SoftIntersectionOverUnionAreaScorer.h  SoftIntersectionOverUnionAreaScorerTest.cc  ThresholdBoundingBoxScorer.h  ThresholdBoundingBoxScorerTest.cc  TrivialScorer.h
tools/: CMakeLists.txt  GenericKwsEvalTool.h  Icdar17KwsEval.cc  KwsEvalIcdar17.cc  SimpleKwsEval.cc
