CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(KWS_EVAL CXX)
ENABLE_TESTING()

OPTION(WITH_TESTS "Compile tests" ON)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
SET(CMAKE_CXX_FLAGS "-std=c++0x -pedantic -Wall")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Try to find GTest, used for test.
FIND_PACKAGE(GTest)
IF(GTEST_FOUND)
  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
ENDIF()

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(tools)