IF(GTEST_FOUND AND GMOCK_FOUND AND WITH_TESTS)
  ADD_EXECUTABLE(ArgumentTest ArgumentTest.cc)
  TARGET_LINK_LIBRARIES(ArgumentTest
    ${COMMON_LIBRARIES} ${GTEST_LIBRARIES} ${GMOCK_BOTH_LIBRARIES})
  ADD_TEST(ArgumentTest ArgumentTest)

  ADD_EXECUTABLE(OptionTest OptionTest.cc)
  TARGET_LINK_LIBRARIES(OptionTest
    ${COMMON_LIBRARIES} ${GTEST_LIBRARIES} ${GMOCK_BOTH_LIBRARIES})
  ADD_TEST(OptionTest OptionTest)

  ADD_EXECUTABLE(ParserTest ParserTest.cc)
  TARGET_LINK_LIBRARIES(ParserTest
    ${COMMON_LIBRARIES} ${GTEST_LIBRARIES} ${GMOCK_BOTH_LIBRARIES})
  ADD_TEST(ParserTest ParserTest)
ENDIF()
