ADD_LIBRARY(cmd INTERFACE)
TARGET_SOURCES(cmd INTERFACE
  ${CMAKE_CURRENT_SOURCE_DIR}/Argument.h
  ${CMAKE_CURRENT_SOURCE_DIR}/Option.h
  ${CMAKE_CURRENT_SOURCE_DIR}/Parser.h)

IF(GTEST_FOUND AND GMOCK_FOUND AND WITH_TESTS)
  ADD_EXECUTABLE(ArgumentTest ArgumentTest.cc)
  TARGET_LINK_LIBRARIES(ArgumentTest
    ${GTEST_BOTH_LIBRARIES} ${COMMON_LIBRARIES})
  ADD_TEST(ArgumentTest ArgumentTest)

  ADD_EXECUTABLE(OptionTest OptionTest.cc)
  TARGET_LINK_LIBRARIES(OptionTest
    ${GTEST_BOTH_LIBRARIES} ${COMMON_LIBRARIES} )
  ADD_TEST(OptionTest OptionTest)

  ADD_EXECUTABLE(ParserTest ParserTest.cc)
  TARGET_LINK_LIBRARIES(ParserTest
    ${GTEST_BOTH_LIBRARIES} ${COMMON_LIBRARIES})
  ADD_TEST(ParserTest ParserTest)
ENDIF()
